# snajper

./: .coverage  Makefile  pyproject.toml  run.sh
snajper/: spotter.py
tests/sample_project/code/: file_1.py  file_2.py  file_3.py
tests/sample_project/tests/: test_file_1.py  test_file_2_and_3.py  test_file_3_and_2.py
